0032722: Visualization, TKOpenGl - performance counters disappear at some camera viewpoints

Fixed OpenGl_FrameStatsPrs::Render() to enable depth clamping.
Fixed OpenGl_View::MinMaxValues() to take into account performance overlay.